examples/test/testpolicy12606.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12606
  namespace: namespace280
spec:
  podSelector:
    matchLabels:
      key31: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value28
          key28: value8
          key38: value31
      podSelector:
        matchLabels:
          key41: value1
          key43: value41
          key23: value27
